tests/cases/structs/errors/struct-constant-literal-missing-field.ari
struct Point {
  x: i64,
  y: i64,
}

const BAD: Point = Point { x: 1 };

fn main() -> i64 {
  return BAD.x;
}
